--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,3 +24,15 @@ textarea {
 #error h2 {
   font-size: 3em;
 }
+
+#tags {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 0.75em;
+}
+
+#tags li {
+  display: inline;
+  margin-right: 5px;
+}
